@@ -1,3 +1,10 @@
+2002-02-10  Andrew Cagney  <ac131313@redhat.com>
+
+	* valops.c (PUSH_ARGUMENTS): Delete definition.
+	* gdbarch.sh (PUSH_ARGUMENTS): Don't require when multi-arch
+	partial.  Default to default_push_arguments.
+	* gdbarch.h, gdbarch.c: Regenerate.
+
 2002-02-09  Andrew Cagney  <ac131313@redhat.com>
 
 	* defs.h (throw_exception): Rename return_to_top_level.  Update
